--- a/src/styles.css
+++ b/src/styles.css
@@ -8,10 +8,23 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
-  width: 100vw;
+  /* height: 100vh;
+  width: 100vw; */
   background-color: var(--bodybg);
 }
 .chart-bg {
   fill: var(--bodybg);
+}
+
+.first-line {
+  stroke: rgb(22, 74, 187);
+  stroke-width: 2;
+}
+.second-line {
+  stroke: rgb(22, 187, 58);
+  stroke-width: 2;
+}
+.third-line {
+  stroke: rgb(211, 15, 162);
+  stroke-width: 2;
 }
