--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,7 @@ body {
   padding: 0;
   margin: 0;
   justify-content: center;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, sans-serif;
   align-items: center;
   /* height: 100vh;
   width: 100vw; */
