--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,12 @@
 /* //Backgrounds */
 :root {
-  --bodybg: #222;
-  --titlesBar: #333;
+  --bodybg: #010101;
+  --titlesBar: #111;
+  --awardCircleFill: #ab4165;
+  --officefont: itc-american-typewriter, serif;
+  --seasoncolor: #adab19;
+  --gray1: #dadada;
+  --bodyText: #bdbdbd;
 }
 body {
   padding: 0;
@@ -12,9 +17,11 @@ body {
   /* height: 100vh;
   width: 100vw; */
   background-color: var(--bodybg);
+  color: var(--bodyText);
 }
 .chart-bg {
   fill: var(--bodybg);
+  /* fill: yellowgreen; */
 }
 
 .first-line {
@@ -41,6 +48,13 @@ body {
   stroke-linecap: round;
   fill: none;
 }
+.screentime-connector {
+  stroke: #535353;
+  stroke-width: 2;
+  stroke-dasharray: 1, 5;
+  stroke-linecap: round;
+  fill: none;
+}
 
 .rayline {
   stroke: #535353;
@@ -49,20 +63,22 @@ body {
 }
 
 .master-chart-group {
-  transform: rotate(7.5deg);
+  transform: rotate(8.3deg);
   transform-origin: center center;
 }
 .titlelabel {
   fill: #eaeaea;
-  opacity: 0.4;
+  opacity: 0.6;
+  letter-spacing: 0.5px;
 }
 .titlelabel:hover {
   opacity: 1;
 }
 
 h1,
-h2 {
-  font-family: itc-american-typewriter, serif;
+h2,
+h3 {
+  font-family: var(--officefont);
   font-weight: 500;
   font-style: normal;
   color: #eaeaea;
@@ -87,7 +103,91 @@ h2 {
 
 .character-vertical-label {
   fill: #ccc;
-  font-size: 10px;
+  font-size: 8px;
   text-anchor: middle;
-  font-weight: 500;
+  font-weight: 600;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+
+circle.award {
+  fill: var(--awardCircleFill);
+}
+circle.award.nom {
+  fill-opacity: 1;
+}
+circle.award.won {
+  fill-opacity: 0.6;
+}
+g#downarrow svg {
+  stroke: var(--seasoncolor);
+  width: 12;
+  height: 12;
+}
+
+.popup {
+  width: 300px;
+  /* pointer-events: none; */
+}
+
+.wedge {
+  fill: var(--titlesBar);
+}
+.g.award-axis-lines text {
+  transform-origin: center center;
+  text-anchor: middle;
+}
+.yearlabel,
+.vertical-header {
+  fill: #b1b1b1;
+  /* font-family: var(--officefont); */
+  letter-spacing: 2;
+  font-weight: 600;
+}
+.vertical-header {
+  font-size: 10px;
+  font-weight: 600;
+  fill: var(--seasoncolor);
+}
+
+.donutText {
+  /* font-family: var(--officefont); */
+  letter-spacing: 2;
+  font-weight: 600;
+  fill: var(--seasoncolor);
+  text-transform: uppercase;
+  font-size: 10px;
+}
+image {
+  border-radius: 50%;
+}
+.arcborder:nth-child(odd) {
+  fill: #444444;
+}
+.arcborder:nth-child(even) {
+  fill: #333;
+}
+/* .avatar {
+}
+.avatar:hover {
+  transform-origin: 0 0;
+  transform: scale(2);
+} */
+.ratingaxis {
+  fill: none;
+  stroke: var(--titlesBar);
+}
+
+.rating-bar {
+  stroke: var(--gray1);
+  stroke-width: 2;
+  stroke-opacity: 0.7;
+}
+
+.text-label-bg {
+  fill: var(--titlesBar);
+}
+.ratingaxis-tick {
+  font-size: 12px;
+  fill: var(--seasoncolor);
 }
